--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -1300,5 +1300,18 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   isbn      = {978-1260548006}
 }
 
+
+@inproceedings{HuangMDE2012,
+   author = {Wei Huang and Ana Milanova and Werner Dietl and Michael D. Ernst},
+   title = {{ReIm} \& {ReImInfer}: Checking and inference of reference
+	immutability and method purity},
+   booktitle = {OOPSLA 2012, Object-Oriented Programming Systems,
+	Languages, and Applications},
+   pages = {879--896},
+   address = {Tucson, AZ, USA},
+   month = oct,
+   year = {2012}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
