--- a/main.tex
+++ b/main.tex
@@ -186,7 +186,7 @@
 \include{experimental}
 \include{related}
 \include{conclusiones}
-%\include{future}
+\include{future}
 
 % \include{trabajofuturo}
 
